chore: update project icon and remove lovable tagger

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>VoxelPromo - Monitoramento de Produtos Afiliados</title>
+    <link rel="icon" type="image/png" href="/icon.png" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="description" content="Sistema de monitoramento e divulgação de produtos afiliados para redes sociais" />
     <meta name="author" content="VoxelPromo" />
 
